build(eslint,vite): 增加eslint规则，修改vite配置
替换TailwindCSS版本为v3，修改不兼容的样式，增加echarts相关文件及配置，增加eslint-plugin-tailwindcss规则

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -31,8 +31,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-vue-text);
-  background: var(--color-vue-background);
+  color: var(--color-text);
+  background: var(--color-background);
   transition:
     color 0.5s,
     background-color 0.5s;
