feat: 增加Pinia持久化缓存功能,升级优化依赖

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 @import './base.css';
+@import 'tdesign-vue-next/es/style/index.css';
 
 @tailwind base;
 @tailwind components;
@@ -35,13 +36,17 @@ body {
 }
 
 #app {
-  @apply mx-auto p-8 max-w-10xl font-normal lg:grid lg:grid-cols-2 lg:px-8 lg:py-0;
+  @apply mx-auto p-8 max-w-8xl font-normal lg:grid lg:grid-cols-2 lg:px-8 lg:py-0;
 }
 
-a.router-link {
-  @apply inline-block p-[3px] px-4 py-0 text-[#00BD7E] no-underline transition duration-400 hover:bg-[#00BD7E33];
+a {
+  @apply text-[#00BD7E] no-underline transition duration-400 hover:bg-[#00BD7E33] p-[3px];
 
-  &.router-link-exact-active {
-    @apply text-vue-text hover:bg-transparent;
+  &.router-link {
+    @apply inline-block px-4;
+
+    &.router-link-exact-active {
+      @apply text-vue-text hover:bg-transparent;
+    }
   }
 }
